assets/style.css
body {
  background-color: #fafafa;
}
.event {
  object-fit: cover;
  width: 200px;
  height: 200px;
}
.carousel-item > img {
  object-fit: cover;
  width: 100%;
  height: 50vh;
}
.carousel-caption {
  max-width: 100%;
  width: 100%;
  background: rgba(0, 0, 0, 0.65);
  left: 0;
  bottom: 0;
}
.card-block {
  width: 50%;
}
.bg-navbar {
  background-color: #a2d5fb;
  border: 0;
}
.card.stage {
  display: inline-block;
}
.nav {
  background-color: lightgrey;
}
.nav-item .active {
  background-color: aaa;
}
.portrait {
  object-fit: cover;
  width: 100%;
}
html {
  position: relative;
  min-height: 100%;
}
body {
  margin-bottom: 30px;
  /* Margin bottom by footer height */
}
.footer {
  position: absolute;
  bottom: 0;
  margin: 0;
  width: 100%;
  height: 40px;
  /* Set the fixed height of the footer here */
}
.input-group.md-form.form-sm.form-1 input {
  border: 1px solid #bdbdbd;
  border-top-right-radius: 0.25rem;
  border-bottom-right-radius: 0.25rem;
}
.input-group.md-form.form-sm.form-2 input {
  border: 1px solid #bdbdbd;
  border-top-left-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}
.input-group.md-form.form-sm.form-2 input.red-border {
  border: 1px solid #ef9a9a;
}
.input-group.md-form.form-sm.form-2 input.lime-border {
  border: 1px solid #cddc39;
}
.input-group.md-form.form-sm.form-2 input.amber-border {
  border: 1px solid #ffca28;
}
.close {
  line-height: 0.85;
  margin-left: 5px;
}
li.clean {
  list-style: none;
  margin: 5px;
}
.card-img-top.festival {
  object-fit: cover;
  width: 100%;
  max-height: 12em;
}
.card-img-top.event {
  object-fit: cover;
  width: 100%;
  max-height: 12em;
}
/* roboto-regular - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'), url('../fonts/roboto-v20-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v20-latin-regular.woff') format('woff');
  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* roboto-italic - latin */
@font-face {
  font-family: 'Roboto';
  font-style: italic;
  font-weight: 400;
  src: local('Roboto Italic'), local('Roboto-Italic'), url('../fonts/roboto-v20-latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v20-latin-italic.woff') format('woff');
  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* roboto-500 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 500;
  src: local('Roboto Medium'), local('Roboto-Medium'), url('../fonts/roboto-v20-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v20-latin-500.woff') format('woff');
  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* roboto-500italic - latin */
@font-face {
  font-family: 'Roboto';
  font-style: italic;
  font-weight: 500;
  src: local('Roboto Medium Italic'), local('Roboto-MediumItalic'), url('../fonts/roboto-v20-latin-500italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v20-latin-500italic.woff') format('woff');
  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* roboto-700 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  src: local('Roboto Bold'), local('Roboto-Bold'), url('../fonts/roboto-v20-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v20-latin-700.woff') format('woff');
  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* roboto-700italic - latin */
@font-face {
  font-family: 'Roboto';
  font-style: italic;
  font-weight: 700;
  src: local('Roboto Bold Italic'), local('Roboto-BoldItalic'), url('../fonts/roboto-v20-latin-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v20-latin-700italic.woff') format('woff');
  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* archivo-black-regular - latin */
@font-face {
  font-family: 'Archivo Black';
  font-style: normal;
  font-weight: 400;
  src: local('Archivo Black Regular'), local('ArchivoBlack-Regular'), url('../fonts/archivo-black-v9-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/archivo-black-v9-latin-regular.woff') format('woff');
  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
nav.navbar.navbar-light,
footer.navbar.navbar-light {
  background-color: #313846;
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  text-transform: uppercase;
}
nav.navbar.navbar-light a.nav-link,
footer.navbar.navbar-light a.nav-link {
  color: #EFEFEF;
}
nav.navbar.navbar-light a.nav-link.active,
footer.navbar.navbar-light a.nav-link.active,
nav.navbar.navbar-light a.nav-link.focus,
footer.navbar.navbar-light a.nav-link.focus,
nav.navbar.navbar-light a.nav-link:hover,
footer.navbar.navbar-light a.nav-link:hover {
  color: #FFFF33;
}
.artist .gallery img {
  height: auto;
}
.artist .social,
.artist .support {
  font-size: 1.5rem;
}
.artist .social a,
.artist .support a {
  color: #333333;
}
.artist .social a:hover,
.artist .support a:hover {
  color: #333333;
  text-decoration: none;
}
.artist .personalData a {
  color: #333333;
}
.artist .personalData a:hover {
  color: #333333;
}
body {
  font-family: "Roboto", sans-serif;
  background: #EFEFEF;
  color: #333333;
}
.fa,
.fab,
.fas {
  color: #F56C75;
}
a {
  color: #F56C75;
}
a:hover {
  color: #F56C75;
  text-decoration: underline;
}
h1,
h2,
h3,
h4,
h5 {
  font-family: "Archivo Black", sans-serif;
  color: #313846;
}
h1 a,
h2 a,
h3 a,
h4 a,
h5 a {
  color: #313846;
}
h1 a:hover,
h2 a:hover,
h3 a:hover,
h4 a:hover,
h5 a:hover {
  color: #333333;
}

.page-item.active .page-link {
	background-color: #F56C75;
	border-color: #F56C75;
}
.page-link {
	color: #F56C75;
}
/*# sourceMappingURL=style.css.map */
.highlight {
	color: #F56C75 !important;
}
.container.chat {
	height: 30px;
	width: 350px;
	margin: 0;
	padding: 0;
	bottom: 0;
	right: 0;
	background-color: darkgrey;
	color: white;
	text-align: center;
	cursor: pointer;
	z-index: 999;
}

.container.chat.opened {
	height: 66%;
}

.chat-header {
	font-weight: bold;
}

.chat-body {
	height: 100%;
	overflow-y: scroll;
}

.chat-message {
	font-size: 0.8em;
	text-align: left;
	margin: 4px;
}

#chat {
	display: none;
}

